--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-  </body>
+    <form class="form">
+        <input
+          class="form-input"
+          type="text"
+          name="input"
+          placeholder="Search images"
+        />
+        <button type="submit" class="search-button">Search</button>
+    </form>
+    <div class="loading is-hidden"><span class="loader"></span>Loading ...</div>
+      <div class="resultContainer"></div>
+    <ul class="gallery"></ul>
+    <script src="./main.js" type="module"></script>
+</body>
 </html>
