--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
         />
         <button type="submit" class="search-button">Search</button>
     </form>
-    <div class="loading is-hidden"><span class="loader"></span>Loading ...</div>
+    <div class="loading is-hidden">
+      <span class="loader"></span>Loading ...
+    </div>
       <div class="resultContainer"></div>
     <ul class="gallery"></ul>
     <script src="./main.js" type="module"></script>
